--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@types/gsap": "^3.0.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
+    "scrollmagic": "^2.0.8",
+    "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.2.1",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
