--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
     "scrollmagic": "^2.0.8",
     "styled-components": "^6.1.8",
