--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "scrollmagic": "^2.0.8",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
