--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@studio-freight/lenis": "^1.0.39",
     "@types/gsap": "^3.0.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
