--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
-    
     "@studio-freight/lenis": "^1.0.39",
     "@types/gsap": "^3.0.0",
     "clsx": "^2.1.0",
@@ -41,6 +40,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
