--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@react-three/drei": "^9.99.5",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.55",
     "@studio-freight/lenis": "^1.0.39",
@@ -26,10 +27,12 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
+    "react-three-fiber": "^6.0.13",
     "react-vertical-timeline-component": "^3.6.0",
     "scrollmagic": "^2.0.8",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
+    "three": "^0.162.0",
     "vanta": "^0.5.24"
   },
   "devDependencies": {
