--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splinetool/runtime": "^1.0.55",
     "@studio-freight/lenis": "^1.0.39",
     "@types/gsap": "^3.0.0",
+    "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.7",
     "gsap": "^3.12.5",
