--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
     "react-three-fiber": "^6.0.13",
