--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@types/gsap": "^3.0.0",
     "@vercel/analytics": "^1.2.2",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.7",
+    "framer-motion": "^11.0.14",
     "gsap": "^3.12.5",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
@@ -34,7 +35,7 @@
     "react-vertical-timeline-component": "^3.6.0",
     "scrollmagic": "^2.0.8",
     "styled-components": "^6.1.8",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "three": "^0.162.0",
     "vanta": "^0.5.24"
   },
