lottery animation added

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gsap": "^3.12.5",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.8.1",
