--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.1",
+    "react-social-media-embed": "^2.5.9",
     "react-three-fiber": "^6.0.13",
     "react-vertical-timeline-component": "^3.6.0",
     "scrollmagic": "^2.0.8",
