--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@glidejs/glide": "^3.6.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
@@ -22,15 +23,18 @@
     "@studio-freight/lenis": "^1.0.39",
     "@types/gsap": "^3.0.0",
     "@vercel/analytics": "^1.2.2",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
     "gsap": "^3.12.5",
+    "infinite-react-carousel": "^1.2.11",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.8.1",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
     "react-social-media-embed": "^2.5.9",
     "react-three-fiber": "^6.0.13",
     "react-vertical-timeline-component": "^3.6.0",
