--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
     "gsap": "^3.12.5",
-    "infinite-react-carousel": "^1.2.11",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.8.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
+    "react-simply-carousel": "^9.1.3",
     "react-slick": "^0.30.2",
     "react-social-media-embed": "^2.5.9",
     "react-three-fiber": "^6.0.13",
