--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
     "gsap": "^3.12.5",
     "mini-svg-data-uri": "^1.4.4",
