--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "scrollmagic": "^2.0.8",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
+    "taos": "^1.0.5",
     "three": "^0.162.0",
     "vanta": "^0.5.24"
   },
